# flash-algo

./: Cargo.toml  README.md  build.sh
.cargo/: config
src/: algo.rs  main.rs
