[package]
authors = ["Willem Leitso <willem@leit.so>"]
edition = "2018"
readme = "README.md"
name = "rsworks-flash-algo"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
stm32f7xx-hal = { version = "0.3", features = ["stm32f730"] }

# this lets you use `cargo fix`!
[[bin]]
name = "rsworks-flash-algo"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
